secciones 1 y 2 terminadas pero no limpias

--- a/public/typography.html
+++ b/public/typography.html
@@ -18,6 +18,8 @@
     
         document.adoptedStyleSheets.push(typescaleStyles.styleSheet);
       </script>
+          <script type="module" src="typography-components.js" defer></script>
+
     <title>Typography Example</title>
 </head>
 <body>
@@ -36,5 +38,6 @@
     <div class="md-typescale-body-large">Body Large</div>
     <div class="md-typescale-body-medium">Body Medium</div>
     <div class="md-typescale-body-small">Body Small</div>
+
 </body>
 </html>
