--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   
     <main>
       <!-- Sección de héroe -->
-      <section id="hero">
+      <section style="background: url('docs/assets/images/library.png') no-repeat center center/cover;" id="hero">
         <div class="hero-content">
           <div class="md-typescale-display-medium">¿Qué tienes en mente el día de hoy?</div>
           <div class="surface surface-1 search-bar surface-hovered">
